--- a/R21_Prelim_210304.Rmd
+++ b/R21_Prelim_210304.Rmd
@@ -151,7 +151,7 @@ human_pc_df <- data.frame(PC1 = human_deseq2_pc3$x[,1], PC2 = human_deseq2_pc3$x
 ggplot(data = human_pc_df, aes_string(x = "PC1", y = "PC2"))
 
 ```
-
+PCA for mouse data
 
 ```{r}
 #MOUSE PCA
@@ -179,7 +179,7 @@ mouse_ind_pca
 
 ```
 
-
+NMF method for ProjectR
 
 ```{r}
 
@@ -200,34 +200,6 @@ plot(AP.mouse_seed800)
 pNMF
 
 
-#Data to project into PC's from mouse expression data (Projecting mouse onto human data? ) 
-human_data <- as.matrix(human_symbol_data)
-human_NMF <- projectR(human_data,loadings=AP.mouse_seed1000, full=TRUE,
-                      dataNames=rownames(human_data))
-human_meta <- column_to_rownames(human_info, var = "SRR")
-dNMF <- human_NMF %>% data.frame() %>% t() %>% cbind(., human_meta)
-
-projection_NMF <- human_NMF$projection %>% t() %>% cbind(., human_meta)
-pval_NMF <- human_NMF$pval
-#plot pca
-projection_plot <- ggplot(projection_NMF, aes(x = Pattern_1, y = Pattern_2, colour = PrePost)) + geom_point()
-projection_plot
-
-
-setEpiCOL <- scale_colour_manual(values = c("red","green","blue","black"),
-                                 guide = guide_legend(title="Lineage"))
-pNMF2ESepiGen4c1l <- ggplot(dNMF2ESepi, aes(x=X1, y=X2, colour=Condition)) +
-  geom_point(size=5) + setEpiCOL +
-  theme(legend.position=c(0,0), legend.justification=c(0,0),
-        panel.background = element_rect(fill = "white"),
-        legend.direction = "horizontal",
-        plot.title = element_text(vjust = 0,hjust=0,face="bold"))
-labs(title = "Encode RNAseq in target PC1 & PC2",
-     x=paste("Projected PC1 (",round(PCA2ESepi[[2]][1],2),"% of varience)",sep=""),
-     y=paste("Projected PC2 (",round(PCA2ESepi[[2]][2],2),"% of varience)",sep=""))
-
-pNMF2ESepiGen4c1l
-
 
 AP.human <- CoGAPS(human_symbol_data, params, nIterations = 1500)
 #heatmap
@@ -236,15 +208,48 @@ human_NMF <-heatmap.2(as.matrix(AP.human),col=bluered, trace='none',
                  cexCol=1,cexRow=.6,scale = "row", main = "Patterns in Exercise/Non in Humans", labRow = rownames(human_symbol_data), xlab = "Patterns",
                  hclustfun=function(x) hclust(x, method="average"))
 plot(AP.human)
-pNMF
-```
 
+
+
+#Data to project into PC's from mouse expression data (Projecting mouse onto human data? ) 
+human_data <- as.matrix(human_symbol_data)
+human_NMF <- projectR(human_data,loadings=AP.mouse_seed1000, full=TRUE,
+                      dataNames=rownames(human_data))
+#[1] "30 row names matched between data and loadings"
+#[1] "Updated dimension of data: 30 58"
+human_meta <- column_to_rownames(human_info, var = "SRR")
+dNMF <- human_NMF %>% data.frame() %>% t() %>% cbind(., human_meta)
+
+projection_NMF <- human_NMF$projection %>% t() %>% cbind(., human_meta)
+pval_NMF <- human_NMF$pval
+#plot pca
+projection_plot <- ggplot(projection_NMF, aes(x = Pattern_1, y = Pattern_2, colour = PrePost)) + geom_point() + ggtitle("Mouse Patterns Projected onto Human Data")
+projection_plot
+ggsave("Mouse_Projected_to_Human.pdf", projection_plot)
+
+```
+PCA Method of Projecting
 
 ```{r}
+human_deseq2_pc3 <- prcomp(t(human_symbol_data))
+pc_mouse <- prcomp(t(mouse_vsd_matrix))
+#find variance
+pc_var <- round(((pc_mouse$sdev)^2/sum(pc_mouse$sdev^2))*100,2)
+mouse_pca_df <- data.frame(cbind(pc_mouse$x, mouse_meta))
 
+PCA_projectr <- projectR(human_data, loadings = pc_mouse, full = TRUE, dataNames = rownames(human_data))
+PCA_projectr_df <- data.frame(Condition = sapply(colnames(human_data), function(x) unlist(strsplit(x, '_'))[1]), stringsAsFactors = FALSE) 
+#[1] "0 row names matched between data and loadings"
+#[1] "Updated dimension of data: 0 58"
 
+#just for reference, delete afterwards
+human_NMF <- projectR(human_data,loadings=AP.mouse_seed1000, full=TRUE,
+                      dataNames=rownames(human_data))
+human_meta <- column_to_rownames(human_info, var = "SRR")
+dNMF <- human_NMF %>% data.frame() %>% t() %>% cbind(., human_meta)
 
-
+projection_NMF <- human_NMF$projection %>% t() %>% cbind(., human_meta)
+pval_NMF <- human_NMF$pval
 ```
 
 ## Including Plots
